message AcoustAppData {
	required string address = 1;
	required string data = 2;
}